--- a/site/public/index.html
+++ b/site/public/index.html
@@ -12,100 +12,87 @@
 	<link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">	
 	<link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">	
 </head>
+
 <body>
     <header>
-		<div id="logoSection" class="container">
-			<img id="logo" src="img/hr-logo.png" alt="HRtechSolutions">
+		<nav class="navbar navbar-default" id="navBar">
+			<div class="container">		
+				<button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#menuItens" aria-expanded="false">
+					<img id="imgMenu" src="img/Menu.svg">
+				</button>		
+			<a class="navbar-brand" href="#"><img id="logo" src="img/hr-logo.png" alt="HRtechSolutions"></a>	
+			</div>
+		</nav>
+
+		<div class="collapse navbar-collapse row" id="menuItens">
+			<div class="col-md-offset-6 col-md-6">
+				<ul class="nav navbar-nav">
+					<li><a href"#QuemSomos" class="itemMenu" >Quem Somos</a></li>
+					<li><a herf="#OQueFazemos" class="itemMenu">O que fazemos</a></li>
+					<li><a herf="#Tutorial" class="itemMenu">Tutorial</a></li>
+				</ul>
+			</div>
 		</div>
-    </header>
+	</header>
 
 	<div id="imgBackground">
-
-		<section id="home" class="container">
-		    <div id="main-title">
-	    		<h1>DESCUBRA COMO O MERCADO BRASILEIRO ESTÁ 
-	    		<br> CONTRATANDO PROFISSIONAIS DE VENDAS</h1>
-		    </div>
-
-		    <div id="textContent">
-	    		<h2>Queremos entender como funciona a 
-    			<br/>seleção de profissionais de vendas para 
-    			<br/>desenvolver uma 
-    			<span class="colorWord">solução</span>
-    			que agregue nos 
-    			<br/>interesses dos vendedores e das empresas.</h2>
-		    </div>
-		</section>
-
-		<section id="fill-out" class="container">
-
-			<div id="type-selector" class="row ">
-				<div class="col-md-3">
-					<button id="type-employer" class="btnType"/>Profissional de RH</label>
-				</div>
-				<div class="col-md-3">
-					<button id="type-employee" class="btnType"/>Vendedor</label>	
-				</div>               
+		<section id="home">
+			<div id="main-title" class="container">
+				<h1>PROFISSIONAIS DE VENDAS QUALIFICADOS E CERTIFICADOS.
+				<br/>	 
+				<span class="colorWord">ONDE ENCONTRAR E COMO SE TORNAR UM?</span></h1>
 			</div>
-		</section>	
-	</div>	
 
-	
-		<section id="formQuestions" class="container">
-			<div class="row">
-				<div class="col-md-offset-2 col-md-9">
-					<form class="form-client">
-						<div id="nameEmailInfo">
-							<div class="row">
-								<div class="col-md-5">
-									<div class="row itemForm">
-										<label for="full-name">Nome completo</label>
-									</div>
-									<div class="row">
-										<div class="input-group">
-										  <span class="input-group-addon" id="basic-addon1">
-										  	<img src="img/user-shape.png" width="18px" height="18px">
-										  </span>
-										  <input id="full-name" name="full-name" autofocus="" type="text" class="form-control itemForm" aria-describedby="basic-addon1"					  
-										  	pattern="(.*)\s(.*)" 
-											oninvalid="this.setCustomValidity('Por favor preecha seu nome completo.')"
-											oninput="setCustomValidity('')" required tabindex="1"/>		
-										</div>	
-									</div>
-								</div>
-								<div class="col-md-offset-1 col-md-5">
-									<div class="row itemForm">
-										<label id="email-label" for="email">E-mail</label>
-									</div>
-									<div class="row">
-										<div class="input-group">										
-											<span class="input-group-addon" id="basic-addon1">
-												<img src="img/black-back-closed-envelope-shape.png" width="18px" height="18px">
-											</span>										
-											<input id="email" type="email" class="form-control itemForm" aria-describedby="basic-addon1" required tabindex="2"/>
-										</div>	
-									</div>									
-								</div>
-							</div>
-
-							<div class="row" id="form">
-
-							</div>
-
-							<div class="row row-reverse">
-								<div class="col-md-offset-8 col-md-3">
-								<button id="btnSummit" class="btnType" type="submit">Enviar</button>
-								</div>
-							</div>
+			<div id="textContent" class="container">
+				<h2>Vendedor: descubra qual seu nível de qualificação profissional.</h2>			
+					<div class="row">
+						<div id="btnTeste" class=" col-sm-offset-1 col-md-10">
+							<button type="button" class="btnType">FAÇA O TESTE    <img id="imgBtn" src="img/Teste.svg"></button>
 						</div>
-					</form>
-				</div>
-			</div>		
+					</div>
+			</div>
 		</section>
-	<div id="form_07277e19"></div>
+	</div>	
+	
+		<section id="QuemSomos">
+			<div class="container">
+				<div class="row">				
+					<div class="col-md-6">
+						<h1 class="titulo">QUEM SOMOS</h1>
+						<hr class="DivVerde">
+						<h3><p>A HR Tech Solutions é uma startup brasileira criada em 2018 para conectar pessoas e negócios. Somos especializados no mercado de Vendas e desenvolvemos soluções para atender nossos clientes, sejam eles empresas ou candidatos.</p>
+							<p>Confira quem são as pessoas que fazem a HR Tech Solutions acontecer, um time obstinado em fazer com que as empresas tenham os melhores vendedores disponíveis no mercado, e que esses tenham autoconhecimento profissional.</p></h3>
+					</div>
+					<div class="col-md-6">
+						<img id="imgQuemSomos" src="img/Quem-Somos-Mobile.jpg">
+					</div>
+				</div>
+			</div>
+		</section>
 
-	<footer class="main-footer">
+		<section id="OQueFazemos">
+			<div class="container">
+				<h1 class="titulo">O QUE FAZEMOS</h1>
+				<hr class="DivVerde">
+				<h3><p>Por meio de soluções de HR Tech, oferecemos a melhor forma do profissional descobrir qual seu nível de conhecimento - o que vai permitir mapear seus pontos de melhoria e atuar na busca de fortalecer seus hard e softs skills, ou seja seus conhecimentos técnicos e comportamentais. As empresas têm acesso a todas essas informações e podem agilizar o seu processo de recrutamento e seleção, otimizando custos, tempo com a possibilidade de encontrar profissionais qualificados e certificados.</p></h3>
+			</div>
+		</section>
+		
+		<section id="formQuestions" class="container">
+			<div id="Tutorial">				
+				<div id="form_07277e19"></div>		
+			</div>			
+		</section>
+		
+	
+	<footer class="main-footer container">
+		<div id=class="row">
+			<img src="img/hr-logo.png" class="confLogoFooter1">
+			<a href="https://www.facebook.com/HRTechSolutionsOficial/"><img src="img/Facebook.svg" class="confLogoFooter2"></a>
+			<a href=""><img src="img/LinkedIn.svg" class="confLogoFooter2"></a>
+	</div>
 	</footer>
+
 	<script src="js/libs/firebase.js"></script>
 	<script src="js/libs/jquery-3.3.1.min.js"></script>
 	<script src="js/libs/bootstrap.min.js"></script>
