homepage layout v.1 - done

--- a/site/public/thankYou.html
+++ b/site/public/thankYou.html
@@ -20,19 +20,18 @@
 	</header>
     
     <section class="container">
-        <div>       
-            <p>Muito obrigado por participar do nosso teste! </p>
-            <p>Já deu para perceber que você é um profissional de Vendas que corre atrás porque está interessado em avaliar seus conhecimentos. Continuando neste caminho você terá tantos clientes que vai parecer ter mais sucesso que o Jerry Maguire. </p>       
-            <ps>P.S: Lembre-se não se trata apenas de uma venda, um cliente satisfeito é um cliente fiel!</ps>
-        </div>
-        <div>
-            <img src="img/Jerry Maguire Money GIF-downsized_large.gif">
-        </div>
-        
+		<div class="row">        
+			<div class="col-md-offset-2 col-md-8 col-sm-offset-2 col-sm-8 col-xs-offset-2 col-xs-8">       
+				<h1>Muito obrigado por participar do nosso teste! </h1>
+				<h3>Já deu para perceber que você é um profissional de Vendas que corre atrás porque está interessado em avaliar seus conhecimentos. Continuando neste caminho você terá tantos clientes que vai parecer ter mais sucesso que o Jerry Maguire.</h3>      
+				<h3>P.S: Lembre-se não se trata apenas de uma venda, um cliente satisfeito é um cliente fiel!</h3>
+			</div>
+		</div>
+			<div id="gif"> 		
+				<img src="img/Jerry Maguire Money GIF-downsized_large.gif">
+			</div>    
     </section>
 	
-	<footer class="main-footer">
-	</footer>
 	<script src="js/libs/firebase.js"></script>
 	<script src="js/libs/jquery-3.3.1.min.js"></script>
 	<script src="js/libs/bootstrap.min.js"></script>
