--- a/site/public/index.html
+++ b/site/public/index.html
@@ -25,39 +25,49 @@
 		</nav>
 
 		<div class="collapse navbar-collapse row" id="menuItens">
-			<div class="col-md-offset-6 col-md-6">
-				<ul class="nav navbar-nav">
-					<li><a href"#QuemSomos" class="itemMenu" >Quem Somos</a></li>
-					<li><a herf="#OQueFazemos" class="itemMenu">O que fazemos</a></li>
-					<li><a herf="#Tutorial" class="itemMenu">Tutorial</a></li>
-				</ul>
-			</div>
+			<ul class="nav navbar-nav">
+				<li><a href="#QuemSomos" class="itemMenu">Quem Somos</a></li>
+				<li><a href="#OQueFazemos" class="itemMenu">O que fazemos</a></li>
+				<li><a href="#Tutorial" class="itemMenu">Tutorial</a></li>
+			</ul>
 		</div>
 	</header>
 
 	<div id="imgBackground">
 		<section id="home">
-			<div id="main-title" class="container">
-				<h1>PROFISSIONAIS DE VENDAS QUALIFICADOS E CERTIFICADOS.
-				<br/>	 
-				<span class="colorWord">ONDE ENCONTRAR E COMO SE TORNAR UM?</span></h1>
-			</div>
-
-			<div id="textContent" class="container">
-				<h2>Vendedor: descubra qual seu nível de qualificação profissional.</h2>			
-					<div class="row">
-						<div id="btnTeste" class=" col-sm-offset-1 col-md-10">
-							<button type="button" class="btnType">FAÇA O TESTE    <img id="imgBtn" src="img/Teste.svg"></button>
+			<div class="row">
+				<div class="col-md-offset-1 col-md-11">
+					<div id="main-title" class="container">
+						<div class="row">
+							<div class="col-sm-8">
+								<h1>PROFISSIONAIS DE VENDAS QUALIFICADOS E CERTIFICADOS.
+								<br/>	 
+								<span class="colorWord">ONDE ENCONTRAR E COMO SE TORNAR UM?</span></h1>
+							</div>
 						</div>
 					</div>
+
+					<div id="textContent" class="container">
+						<div class="row">
+							<div class="col-sm-6">
+								<h2>Vendedor: descubra qual seu nível de qualificação profissional.</h2>	
+							</div>	
+						</div>
+						<div class="row">
+							<div class="col-sm-4">
+								<a href="" id="btnTeste" class="btnTest">FAÇA O TESTE  <img id="imgBtn" src="img/Teste.svg"></a>
+							</div>	
+						</div>
+					</div>
+				</div>
 			</div>
 		</section>
 	</div>	
 	
-		<section id="QuemSomos">
-			<div class="container">
+		<section>
+			<div id="QuemSomos" class="ajustText">
 				<div class="row">				
-					<div class="col-md-6">
+					<div class="col-md-offset-2 col-md-4">
 						<h1 class="titulo">QUEM SOMOS</h1>
 						<hr class="DivVerde">
 						<h3><p>A HR Tech Solutions é uma startup brasileira criada em 2018 para conectar pessoas e negócios. Somos especializados no mercado de Vendas e desenvolvemos soluções para atender nossos clientes, sejam eles empresas ou candidatos.</p>
@@ -70,27 +80,41 @@
 			</div>
 		</section>
 
-		<section id="OQueFazemos">
-			<div class="container">
-				<h1 class="titulo">O QUE FAZEMOS</h1>
-				<hr class="DivVerde">
-				<h3><p>Por meio de soluções de HR Tech, oferecemos a melhor forma do profissional descobrir qual seu nível de conhecimento - o que vai permitir mapear seus pontos de melhoria e atuar na busca de fortalecer seus hard e softs skills, ou seja seus conhecimentos técnicos e comportamentais. As empresas têm acesso a todas essas informações e podem agilizar o seu processo de recrutamento e seleção, otimizando custos, tempo com a possibilidade de encontrar profissionais qualificados e certificados.</p></h3>
+		<section >
+			<div id="OQueFazemos" class="ajustText">
+				<div class="row">
+					<div class="col-md-offset-2 col-md-8">
+						<h1 class="titulo">O QUE FAZEMOS</h1>
+						<hr class="DivVerde">
+						<h3><p>Por meio de soluções de HR Tech, oferecemos a melhor forma do profissional descobrir qual seu nível de conhecimento - o que vai permitir mapear seus pontos de melhoria e atuar na busca de fortalecer seus hard e softs skills, ou seja seus conhecimentos técnicos e comportamentais. As empresas têm acesso a todas essas informações e podem agilizar o seu processo de recrutamento e seleção, otimizando custos, tempo com a possibilidade de encontrar profissionais qualificados e certificados.</p></h3>
+					</div>
+				</div>
 			</div>
 		</section>
 		
 		<section id="formQuestions" class="container">
-			<div id="Tutorial">				
-				<div id="form_07277e19"></div>		
-			</div>			
+			<div id="Tutorial" class="row">
+				<div class="col-md-offset-2 col-md-8">			
+					<div id="form_07277e19"></div>		
+				</div>	
+			</div>		
 		</section>
-		
+
 	
-	<footer class="main-footer container">
-		<div id=class="row">
-			<img src="img/hr-logo.png" class="confLogoFooter1">
-			<a href="https://www.facebook.com/HRTechSolutionsOficial/"><img src="img/Facebook.svg" class="confLogoFooter2"></a>
-			<a href=""><img src="img/LinkedIn.svg" class="confLogoFooter2"></a>
-	</div>
+	<footer>
+		<div class="container">
+			<div class="row main-footer">
+				<div class="col-md-offset-2 col-md-3 col-sm-offset-2 col-sm-3 col-xs-offset-2 col-xs-3">
+					<img src="img/hr-logo.png" class="confLogoFooter1">
+				</div>
+				<div class="col-md-offset-1 col-md-1 col-sm-offset-1 col-sm-1 col-xs-offset-1 col-xs-1">
+					<a href="https://www.facebook.com/HRTechSolutionsOficial/"><img src="img/Facebook.svg" class="confLogoFooter2"></a>
+				</div>
+				<div class="col-md-offset-1 col-md-1 col-sm-offset-1 col-sm-1 col-xs-offset-1 col-xs-1">
+					<a href="https://www.linkedin.com/company/11561051/"><img src="img/LinkedIn.svg" class="confLogoFooter2"></a>
+				</div>
+			</div>
+		</div>
 	</footer>
 
 	<script src="js/libs/firebase.js"></script>
