--- a/site/public/index.html
+++ b/site/public/index.html
@@ -48,7 +48,7 @@
 					</div>
 
 					<div id="textContent" class="container">
-						<div class="row">
+						<!--<div class="row">
 							<div class="col-sm-6">
 								<h2>Vendedor: descubra qual seu nível de qualificação profissional.</h2>	
 							</div>	
@@ -57,7 +57,7 @@
 							<div class="col-sm-4">
 								<a href="" id="btnTeste" class="btnTest">FAÇA O TESTE  <img id="imgBtn" src="img/Teste.svg"></a>
 							</div>	
-						</div>
+						</div>-->
 					</div>
 				</div>
 			</div>
