--- a/site/public/index.html
+++ b/site/public/index.html
@@ -108,10 +108,10 @@
 					<img src="img/hr-logo.png" class="confLogoFooter1">
 				</div>
 				<div class="col-md-offset-1 col-md-1 col-sm-offset-1 col-sm-1 col-xs-offset-1 col-xs-1">
-					<a href="https://www.facebook.com/HRTechSolutionsOficial/"><img src="img/Facebook.svg" class="confLogoFooter2"></a>
+					<a href="https://www.facebook.com/HRTechSolutionsOficial/" target="_blank"><img src="img/Facebook.svg" class="confLogoFooter2"></a>
 				</div>
 				<div class="col-md-offset-1 col-md-1 col-sm-offset-1 col-sm-1 col-xs-offset-1 col-xs-1">
-					<a href="https://www.linkedin.com/company/11561051/"><img src="img/LinkedIn.svg" class="confLogoFooter2"></a>
+					<a href="https://www.linkedin.com/company/11561051/" target="_blank"><img src="img/LinkedIn.svg" class="confLogoFooter2"></a>
 				</div>
 			</div>
 		</div>
