--- a/site/public/thankYou.html
+++ b/site/public/thankYou.html
@@ -20,16 +20,23 @@
 	</header>
     
     <section class="container">
-		<div class="row">        
-			<div class="col-md-offset-2 col-md-8 col-sm-offset-2 col-sm-8 col-xs-offset-2 col-xs-8">       
-				<h1>Muito obrigado por participar do nosso teste! </h1>
-				<h3>Já deu para perceber que você é um profissional de Vendas que corre atrás porque está interessado em avaliar seus conhecimentos. Continuando neste caminho você terá tantos clientes que vai parecer ter mais sucesso que o Jerry Maguire.</h3>      
-				<h3>P.S: Lembre-se não se trata apenas de uma venda, um cliente satisfeito é um cliente fiel!</h3>
+		<div class="row">
+			<div class="col-md-offset-1 col-md-10 col-sm-offset-1 col-sm-10 col-xs-offset-1 col-xs-10">
+				<div id="mensagem">               
+					<h1>Muito obrigado por participar do nosso teste! </h1>
+					<h3>Já deu para perceber que você é um profissional de Vendas que corre atrás porque está interessado em avaliar seus conhecimentos. Continuando neste caminho você terá tantos clientes que vai parecer ter mais sucesso que o Jerry Maguire.</h3>      
+					<h3>P.S: Lembre-se não se trata apenas de uma venda, um cliente satisfeito é um cliente fiel!</h3>
+				</div>
 			</div>
-		</div>
-			<div id="gif"> 		
-				<img src="img/Jerry Maguire Money GIF-downsized_large.gif">
-			</div>    
+		</div>	
+
+		<div class="row">
+			<div class="col-md-offset-1 col-md-10 col-sm-offset-1 col-sm-10 col-xs-offset-1 col-xs-10">
+				<div id="gif" class="container"> 		
+					<img src="img/Jerry Maguire Money GIF-downsized_large.gif">
+				</div>
+			</div>
+		</div>		    
     </section>
 	
 	<script src="js/libs/firebase.js"></script>
