--- a/site/public/thankYou.html
+++ b/site/public/thankYou.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<link rel="icon" type="image/x-icon" href="favicon.ico">
 	<title>HR Tech Solutions</title>
 	<link rel="stylesheet" href="css/libs/bootstrap.min.css">
 	<link rel="stylesheet" href="css/libs/bootstrap-theme.min.css">
