--- a/site/public/index.html
+++ b/site/public/index.html
@@ -12,6 +12,15 @@
 	<!--font-family-->
 	<link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">	
 	<link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">	
+	<!-- Global site tag (gtag.js) - Google Analytics -->
+	<script async src="https://www.googletagmanager.com/gtag/js?id=UA-66101515-3"></script>
+	<script>
+	window.dataLayer = window.dataLayer || [];
+	function gtag(){dataLayer.push(arguments);}
+	gtag('js', new Date());
+
+	gtag('config', 'UA-66101515-3');
+	</script>
 </head>
 
 <body>
