mvp layout thankyou page integration

--- a/site/public/index.html
+++ b/site/public/index.html
@@ -49,16 +49,16 @@
 					</div>
 
 					<div id="textContent" class="container">
-						<!--<div class="row">
+						<div class="row">
 							<div class="col-sm-6">
 								<h2>Vendedor: descubra qual seu nível de qualificação profissional.</h2>	
 							</div>	
 						</div>
 						<div class="row">
 							<div class="col-sm-4">
-								<a href="" id="btnTeste" class="btnTest">FAÇA O TESTE  <img id="imgBtn" src="img/Teste.svg"></a>
+								<a href="#Tutorial" id="btnTeste" class="btnTest">FAÇA O TESTE  <img id="imgBtn" src="img/Teste.svg"></a>
 							</div>	
-						</div>-->
+						</div>
 					</div>
 				</div>
 			</div>
@@ -101,7 +101,6 @@
 			</div>		
 		</section>
 
-	
 	<footer>
 		<div class="container">
 			<div class="row main-footer">
