inserting thankyou page

--- a/site/public/thankYou.html
+++ b/site/public/thankYou.html
@@ -14,32 +14,37 @@
 	<link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">	
 </head>
 <body>
-    <header>
-		<div id="logoSection" class="container">
-			<img id="logo" src="img/hr-logo.png" alt="HRtechSolutions">
-		</div>
-	</header>
-    
-    <section class="container">
-		<div class="row">
-			<div class="col-md-offset-1 col-md-10 col-sm-offset-1 col-sm-10 col-xs-offset-1 col-xs-10">
-				<div id="mensagem">               
-					<h1>Muito obrigado por participar do nosso teste! </h1>
-					<h3>Já deu para perceber que você é um profissional de Vendas que corre atrás porque está interessado em avaliar seus conhecimentos. Continuando neste caminho você terá tantos clientes que vai parecer ter mais sucesso que o Jerry Maguire.</h3>      
-					<h3>P.S: Lembre-se não se trata apenas de uma venda, um cliente satisfeito é um cliente fiel!</h3>
-				</div>
-			</div>
-		</div>	
 
-		<div class="row">
-			<div class="col-md-offset-1 col-md-10 col-sm-offset-1 col-sm-10 col-xs-offset-1 col-xs-10">
-				<div id="gif" class="container"> 		
-					<img src="img/Jerry Maguire Money GIF-downsized_large.gif">
-				</div>
-			</div>
-		</div>		    
-    </section>
-	
+<header style="width: 100%; box-shadow: 0px 3px 10px -5px black; left: 0;">  
+	<div class="container" id="logoSection" style="max-width: 1000px; margin: auto !important;">    
+		<img alt="HRtechSolutions" id="logo" src="img/hr-logo.png" style="float:left; margin: 10px 10%; width: 130px;">    
+		
+		<div style="max-width: 600px; font-size: 12px; float: right; margin: 10px 2%;">      
+			<h1 style="text-align: right; line-height: 110%;">Recebemos a sua solicitação com sucesso!</h1>    	
+		</div> 
+
+		<div style="clear:both"></div>  
+	</div> 
+</header>
+
+<section>  
+	<div id="TYPmsgGif1" class="row">    
+		<div class="col-md-3 col-xs-3"></div>
+		<div id="TYPmsgBox" class="col-md-6 col-xs-6">    
+			<h4 class="TYPConfText1">Enviamos login e senha para que você possa realizar sua avaliação profissional como vendedor no e-mail informado. Não se esqueça de checar se a mensagem não caiu na caixa de Spam (Lixo Eletrônico).</h4>    
+		</div>  
+	</div>
+</section>
+
+<section>  
+	<div class="row">    
+		<div style="max-width: 500px; margin: auto; clear: both; margin-bottom: 80px;">      
+			<div style="display: inline-block; vertical-align:  middle; padding: 10px 20px; border-left:  0;">        
+				<h4 class="TYPConfText2">Sinta-se à vontade para visitar nossa FanPage no <a href="https://www.facebook.com/HRTechSolutionsOficial/">Facebook</a>.</h4>      
+			</div>    
+		</div> 
+	 </div> 
+ </section>
 	<script src="js/libs/firebase.js"></script>
 	<script src="js/libs/jquery-3.3.1.min.js"></script>
 	<script src="js/libs/bootstrap.min.js"></script>
@@ -49,5 +54,3 @@
 	<script src="js/views/index.js?v=1"></script>
 </body>
 </html>
-
-
