--- a/site/public/index.html
+++ b/site/public/index.html
@@ -81,7 +81,6 @@
 						<h1 class="titulo">QUEM SOMOS</h1>
 						<hr class="DivVerde">
 						<h3><p>A HR Tech Solutions é uma startup brasileira criada em 2018 para conectar pessoas e negócios. Somos especializados no mercado de Vendas e desenvolvemos soluções para atender nossos clientes, sejam eles empresas ou candidatos.</p>
-							<p>Confira quem são as pessoas que fazem a HR Tech Solutions acontecer, um time obstinado em fazer com que as empresas tenham os melhores vendedores disponíveis no mercado, e que esses tenham autoconhecimento profissional.</p></h3>
 					</div>
 					<div class="col-md-6">
 						<img id="imgQuemSomos" src="img/Quem-Somos-Mobile.jpg">
@@ -111,19 +110,14 @@
 		</section>
 
 	<footer>
-		<div class="container">
-			<div class="row main-footer">
-				<div class="col-md-offset-2 col-md-3 col-sm-offset-2 col-sm-3 col-xs-offset-2 col-xs-3">
-					<img src="img/hr-logo.png" class="confLogoFooter1">
-				</div>
-				<div class="col-md-offset-1 col-md-1 col-sm-offset-1 col-sm-1 col-xs-offset-1 col-xs-1">
-					<a href="https://www.facebook.com/HRTechSolutionsOficial/" target="_blank"><img src="img/Facebook.svg" class="confLogoFooter2"></a>
-				</div>
-				<div class="col-md-offset-1 col-md-1 col-sm-offset-1 col-sm-1 col-xs-offset-1 col-xs-1">
-					<a href="https://www.linkedin.com/company/11561051/" target="_blank"><img src="img/LinkedIn.svg" class="confLogoFooter2"></a>
-				</div>
-			</div>
-		</div>
+	    <div class="row main-footer">
+	        <div class="col-md-4"></div>
+	        <div class="col-md-4">
+	            <img src="img\hr-logo.png" class="confLogoFooter1">
+	            <a href="https://www.facebook.com/HRTechSolutionsOficial/" target="_blank"><img src="img\Facebook.svg" class="confLogoFooter2"></a>
+	            <a href="https://www.linkedin.com/company/11561051/" target="_blank"><img src="img\LinkedIn.svg" class="confLogoFooter2"></a>
+	        </div>
+	    </div>
 	</footer>
 
 	<script src="js/libs/firebase.js"></script>
