--- a/site/public/getcsv.html
+++ b/site/public/getcsv.html
@@ -1,12 +1,11 @@
 <html>
     <head>
-        <script src="js/infra/LeadCsvExport.js"></script>
+        <script src="js/infra/LeadsCsvExport.js"></script>
         <script>
-            new LeadCsvExport().export();
+            new LeadsCsvExport().export();
         </script>
     </head>
     <body>
-        <button onclick=""> Exportar
-        </button>
+        <button id="btn-get-lead-csv" onclick="">Exportar</button>
     </body>
 </html>
