--- a/site/public/getcsv.html
+++ b/site/public/getcsv.html
@@ -6,6 +6,14 @@
         </script>
     </head>
     <body>
-        <button id="btn-get-lead-csv" onclick="">Exportar</button>
+        <button id="btn-get-lead-csv" onclick="$('btn-getlead-csv').click(() => new LeadExportCsv().export());">Exportar</button>
     </body>
+
+	<script src="js/libs/jquery-3.3.1.min.js"></script>
+    <script src="js/libs/bootstrap.min.js"></script>
+	<script src="js/libs/firebase.js"></script>
+	<script src="js/dal/BaseDal.js?v=3"></script>
+	<script src="js/dal/LeadDal.js?v=3"></script>
+	<script src="js/models/Lead.js?v=3"></script>
+    <script src="js/views/getCsv.js"></script>  
 </html>
