csv export settings2

--- a/site/public/getcsv.html
+++ b/site/public/getcsv.html
@@ -1,12 +1,12 @@
 <html>
     <head>
-        <script src="js/infra/LeadsCsvExport.js"></script>
+        <!--<script src="js/infra/LeadsCsvExport.js"></script>
         <script>
             new LeadsCsvExport().export();
-        </script>
+        </script>-->
     </head>
     <body>
-        <button id="btn-get-lead-csv" onclick="$('btn-getlead-csv').click(() => new LeadExportCsv().export());">Exportar</button>
+        <button id="btn-get-lead-csv" onclick="">Exportar</button>
     </body>
 
 	<script src="js/libs/jquery-3.3.1.min.js"></script>
@@ -15,5 +15,5 @@
 	<script src="js/dal/BaseDal.js?v=3"></script>
 	<script src="js/dal/LeadDal.js?v=3"></script>
 	<script src="js/models/Lead.js?v=3"></script>
-    <script src="js/views/getCsv.js"></script>  
+    <script src="js/views/getcsv.js"></script>  
 </html>
