csv exporting settings

--- a/site/public/getcsv.html
+++ b/site/public/getcsv.html
@@ -16,4 +16,5 @@
 	<script src="js/dal/LeadDal.js?v=3"></script>
 	<script src="js/models/Lead.js?v=3"></script>
     <script src="js/views/getcsv.js"></script>  
+    <script src="js/infra/LeadsCsvExport.js"></script>
 </html>
