--- a/site/public/getcsv.html
+++ b/site/public/getcsv.html
@@ -14,7 +14,9 @@
 	<script src="js/libs/firebase.js"></script>
 	<script src="js/dal/BaseDal.js?v=3"></script>
 	<script src="js/dal/LeadDal.js?v=3"></script>
-	<script src="js/models/Lead.js?v=3"></script>
+    <script src="js/models/Lead.js?v=3"></script>
+    <script src="js/helpers/DataHelper.js"></script>
+    <script src="js/infra/LeadsCsvExport.js"></script>    
     <script src="js/views/getcsv.js"></script>  
-    <script src="js/infra/LeadsCsvExport.js"></script>
+
 </html>
