homepage layout settings

--- a/site/public/index.html
+++ b/site/public/index.html
@@ -66,54 +66,50 @@
 
 	<div id="imgBackground">
 		<section id="home">
-			<div class="row">
-				<div class="col-md-offset-1 col-md-11">
-					<div id="main-title" class="container">
-						<div class="row">
-							<div class="col-md-6 col-sm-12 col-xs-12">
-								<h1>PROFISSIONAIS DE VENDAS QUALIFICADOS E CERTIFICADOS.
-								<br/>	 
-								<span class="colorWord">ONDE ENCONTRAR E COMO SE TORNAR UM?</span></h1>
-							</div>
+			<div class="row">					
+				<div id="main-title" class="container">
+					<div class="row">
+						<div class="col-md-offset-1 col-md-8 col-sm-12 col-xs-12">
+							<h1>PROFISSIONAIS DE VENDAS QUALIFICADOS E CERTIFICADOS.
+							<br/>	 
+							<span class="colorWord">ONDE ENCONTRAR E COMO SE TORNAR UM?</span></h1>
 						</div>
 					</div>
+				</div>
 
-					<div id="textContent" class="container">
-						<div class="row">
-							<div class="col-sm-6">
-								<h2>Vendedor: descubra qual seu nível de qualificação profissional.</h2>	
-							</div>	
-						</div>
-						<div class="row">
-							<div class="col-sm-4">
-								<a href="#Tutorial" id="btnTeste" class="btnTest">FAÇA O TESTE  <img id="imgBtn" src="img/Teste.svg"></a>
-							</div>	
-						</div>
+				<div id="textContent" class="container">
+					<div class="row">
+						<div class="col-md-offset-1 col-sm-6 col-sm-12 col-xs-12">
+							<h2>Vendedor: descubra qual seu nível de qualificação profissional.</h2>	
+						</div>	
+					</div>
+					<div class="row">
+						<div class="col-md-offset-1 col-sm-4">
+							<a href="#Tutorial" id="btnTeste" class="btnTest">FAÇA O TESTE  <img id="imgBtn" src="img/Teste.svg"></a>
+						</div>	
 					</div>
 				</div>
 			</div>
 		</section>
 	</div>	
 	
-		<section>
-			<div id="QuemSomos" class="ajustText">
-				<div class="row">				
-					<div class="col-md-offset-2 col-md-4">
-						<h1 class="titulo">QUEM SOMOS</h1>
-						<hr class="DivVerde">
-						<h3><p>A HR Tech Solutions é uma startup brasileira criada em 2018 para conectar pessoas e negócios. Somos especializados no mercado de Vendas e desenvolvemos soluções para atender nossos clientes, sejam eles empresas ou candidatos.</p>
-					</div>
-					<div class="col-md-6">
-						<img id="imgQuemSomos" src="img/Quem-Somos-Mobile.jpg">
-					</div>
+		<div id="QuemSomos" class="ajustText">
+			<div class="row">				
+				<div class="col-md-offset-1 col-md-5 col-sm-12 col-xs-12">
+					<h1 class="titulo">QUEM SOMOS</h1>
+					<hr class="DivVerde">
+					<h3><p>A HR Tech Solutions é uma startup brasileira criada em 2018 para conectar pessoas e negócios. Somos especializados no mercado de Vendas e desenvolvemos soluções para atender nossos clientes, sejam eles empresas ou candidatos.</p>
+				</div>
+				<div class="col-md-6 col-sm-12 col-xs-12" style="padding:0;" >
+					<img id="imgQuemSomos" src="img/Quem-Somos-Mobile.jpg">
 				</div>
 			</div>
-		</section>
+		</div>
 
-		<section >
+		<section>
 			<div id="OQueFazemos" class="ajustText">
 				<div class="row">
-					<div class="col-md-offset-2 col-md-8 col-sm-offset-2 col-sm-8 col-xs-offset-2 col-xs-10">
+					<div class="col-md-offset-1 col-md-10 col-sm-12 col-xs-12">
 						<h1 class="titulo">O QUE FAZEMOS</h1>
 						<hr class="DivVerde">
 						<h3><p>Por meio de soluções de HR Tech, oferecemos a melhor forma do profissional descobrir qual seu nível de conhecimento - o que vai permitir mapear seus pontos de melhoria e atuar na busca de fortalecer seus hard e softs skills, ou seja seus conhecimentos técnicos e comportamentais. As empresas têm acesso a todas essas informações e podem agilizar o seu processo de recrutamento e seleção, otimizando custos, tempo com a possibilidade de encontrar profissionais qualificados e certificados.</p></h3>
